--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -98,10 +98,7 @@
     background-color: #fff;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    top: 110px;
-    z-index: 2;
-    
+    z-index: 2; 
 }
 .loginForm{
     display: flex;
@@ -132,7 +129,7 @@ input{
     margin-top: 15px;
     align-items: center;
     justify-content: center;
-
+    color:#fff;
 }
 .btn{
     width: 122px;
@@ -142,4 +139,5 @@ input{
     outline:none;
     margin-top: 10px;
     margin-left: 75px;
+    color: #fff; 
 }
