--- a/src/screens/Branch/BranchStyles/claimform.css
+++ b/src/screens/Branch/BranchStyles/claimform.css
@@ -7,3 +7,21 @@
     display: flex;
     width: 100%;
 }
+.formContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start; 
+}
+.firstColumn, .secondColumn{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin: 8px;
+}
+.left, .center, .Right{
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
