--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -66,12 +66,14 @@ nav{
     justify-content: center;
     
   }
+
+  /* login styles */
  
 .pageContainer{
     display: flex;
     min-width: 100vh;
     min-height: 100vh;
-    background: #00792D;
+    background: #fff;
     backdrop-filter: blur(9px);
     align-items: center;
     justify-content: center;
@@ -88,7 +90,8 @@ nav{
     width:100px;
     height:100px;
     border-radius: 120px;
-    background-color: #00792D;
+    background-color: #075E54;
+    ;
     align-items: center;
     justify-content: center;
     margin-top: 20px;
@@ -99,7 +102,7 @@ nav{
     flex-direction: column;
     width: 300px;
     height: 400px;
-    background-color: #000;
+    background-color: #075E54;
     box-shadow: 0px 10px 8px 8px rgba(0, 0, 0, 0.25);
     border-radius: 35px;
     align-items: center;
@@ -118,8 +121,8 @@ input{
     height: 44px;
     border-radius: 8px;
     outline: none;
-    border-color: green;
-    background: rgba(12, 13, 13, 0.69);
+    border-color: #fff;
+    background:#fff;
     margin-top: 15px;
     align-items: center;
     justify-content: center;
@@ -152,12 +155,12 @@ button {
     background-color: transparent;
 }
 .submit{
-    background-color:transparent;
-    border-color: green;
-    color:green;
+    background-color:#FBCD99;
+    
+    color:#000;
 }
 .link{
-    color: aqua;
+    color: rgb(245, 250, 250);
 }
 .passwordContainer{
     display:flex;
@@ -185,3 +188,4 @@ button {
     align-items: center;
     justify-content: center;
 }
+
